# ls

./: .clangd  .gitignore  Makefile  meson.build
.cache/clangd/index/: AddressA64.h.5F156F768AD0DF5E.idx  Allocator.cpp.B6AA30FECB731AB2.idx  Allocator.h.F502F25CC3FD4EA2.idx  Analyze.cpp.AABB880D7BA549FB.idx  AnalyzeRequirer.cpp.6DD300AE190AFD07.idx  AnalyzeRequirer.h.F87C7A9FA599D86A.idx  Anyification.cpp.0A71AE54D7D6B4F0.idx  Anyification.h.3FEF771B7BEA8170.idx  ApplyTypeFunction.cpp.5D0419B3AC2DD624.idx  ApplyTypeFunction.h.AA7D482DA39B9CA3.idx  AssemblyBuilderA64.cpp.4BD43C21BE40B824.idx  AssemblyBuilderA64.h.A5E909E5376BC62B.idx  AssemblyBuilderA64.test.cpp.639D183063E3D3CA.idx  AssemblyBuilderX64.cpp.CB27E77C2F34DEB2.idx  AssemblyBuilderX64.h.265456F0C8B06832.idx  AssemblyBuilderX64.test.cpp.505C548F493DAE5B.idx  Ast.cpp.319EAFB35EAB6A80.idx  Ast.cpp.EFBF601341BEA564.idx  Ast.h.B2DCD7216773E4E4.idx  AstJsonEncoder.cpp.3926015BF8D941C9.idx  AstJsonEncoder.h.DC27C61DB22D6716.idx  AstJsonEncoder.test.cpp.8910BD24D409CF23.idx  AstQuery.cpp.862F6956839CB462.idx  AstQuery.h.33449D1BAE4D905D.idx  AstQuery.test.cpp.F023FAF300B1DCCD.idx  AstQueryDsl.cpp.A2D1387E4685FE99.idx  AstQueryDsl.h.07CAF193DAFD72BA.idx  AstVisitor.test.cpp.E54B77A64E658BB8.idx  Autocomplete.cpp.98CAF2D178D14CFB.idx  Autocomplete.h.6EF9AEE90D348D83.idx  Autocomplete.test.cpp.75ACC205F95E05A6.idx  AutocompleteCore.cpp.0332A02448C44C54.idx  AutocompleteCore.h.F202178ED99598D2.idx  (+495 more)
example/: main.luau
src/: io.cpp  io.hpp  main.cpp  meson.build  runtime.cpp  runtime.hpp
subprojects/: luau.wrap
